--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ img {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-size: 30px;
+    font-size: 20px;
   }
 
   #lezioni .row{
@@ -86,13 +86,16 @@ img {
     margin-top: 0;
   }
 
+  .row{
+    width: 100%;
+  }
+
   #lezioni .row .left{
     width: 100%;
-    height: 330px;
   }
 
   h1{
-    font-size: 50px;
+    font-size: 40px;
     margin-bottom: 30px;
   }
 
@@ -100,10 +103,9 @@ img {
     font-size: 30px;
     margin-top: 0px;
   }
-
+  
   #lezioni .row .right{
     width: 100%;
-    height: 330px;
     margin-top: 50px;
   }
 
@@ -114,7 +116,6 @@ img {
 
   #steps .row .left{
     width: 100%;
-    height: 330px;
   }
 
   #steps .row{
@@ -124,7 +125,6 @@ img {
 
   #steps .row .central{
     width: 100%;
-    height: 330px;
   }
 
   .central{
@@ -133,7 +133,7 @@ img {
 
   #steps .row .right{
     width: 100%;
-    height: 250px;
+    
   }
 
   .right{
@@ -142,6 +142,7 @@ img {
 
   #why .row{
     background-color: #F2F2CD;
+    margin-top: 10px;
   }
 }
   
